Markdownification complete for recent posts, some page conversion

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -20,17 +20,16 @@
 
     </header><div class="e-content entry-content" itemprop="articleBody text">
     <div>
-<p></p>
-<strong>Scottish Roller Derby Blog Technical Annex</strong>
-<a href="https://aoanla.pythonanywhere.com/index.html">Our off-Wordpress site for cool things that Wordpress can't do.</a>
+<p><strong>Scottish Roller Derby Blog Technical Annex</strong>
+<a href="https://aoanla.pythonanywhere.com/index.html">Our off-Wordpress site for cool things that Wordpress can't do.</a></p>
 <p><strong>Official/Governing Bodies</strong></p>
 <p><a href="https://wftda.com/">WFTDA</a> is the governing body of Women's Flat Track Roller Derby,details on rules,rankings,equipment and membership. [Public facing site]
 <a href="https://wftda.org/">WFTDA</a> is the governing body of Women's Flat Track Roller Derby,details on rules,rankings,equipment and membership. [League facing site]</p>
 <p><a href="http://ukrda.org.uk/">UKRDA</a>-The United Kingdom Roller Derby Association.</p>
 <p><a href="http://www.juniorrollerderby.org/">JRDA</a>-Junior Roller Derby Association.</p>
 <p><a href="http://www.mensrollerderbyassociation.com/">MRDA</a>-Men’s Roller Derby Association.</p>
-<p><strong>Scottish Leagues</strong></p>
-<p>As yet unnamed Junior League - Edinburgh-based (JRDA level 1) League</p>
+<p>**Scottish Leagues</p>
+<p>**As yet unnamed Junior League - Edinburgh-based (JRDA level 1) League</p>
 <p>Rollerstop (Glasgow) based Junior League - Glasgow-based (JRDA level 1 to 3) League</p>
 <p><a href="http://arrg.co.uk">Auld Reekie Roller Girls</a> - Edinburgh-based WFTDA League</p>
 <p><a href="https://www.facebook.com/Ayrshire-Roller-Derby-Official-618921518215712/">Ayrshire Roller Derby</a> - Ayrshire-based WFTDA-gender-policy League</p>
