Updated resources page

--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -28,10 +28,10 @@
 <p><a href="http://ukrda.org.uk/">UKRDA</a>-The United Kingdom Roller Derby Association.</p>
 <p><a href="http://www.juniorrollerderby.org/">JRDA</a>-Junior Roller Derby Association.</p>
 <p><a href="http://www.mensrollerderbyassociation.com/">MRDA</a>-Men’s Roller Derby Association.</p>
-<p>**Scottish Leagues</p>
-<p>**As yet unnamed Junior League - Edinburgh-based (JRDA level 1) League</p>
+<p><strong>Scottish Leagues</strong></p>
+<p>Boardwalk Bombs  - Edinburgh-based Junior (JRDA level 1) League</p>
 <p>Rollerstop (Glasgow) based Junior League - Glasgow-based (JRDA level 1 to 3) League</p>
-<p><a href="http://arrg.co.uk">Auld Reekie Roller Girls</a> - Edinburgh-based WFTDA League</p>
+<p><a href="http://auldreekierollerderby.com/">Auld Reekie Roller Derby</a> - Edinburgh-based WFTDA League (renamed from Auld Reekie Roller Girls in 2018)</p>
 <p><a href="https://www.facebook.com/Ayrshire-Roller-Derby-Official-618921518215712/">Ayrshire Roller Derby</a> - Ayrshire-based WFTDA-gender-policy League</p>
 <p><a href="https://www.facebook.com/BairnCityRollers/">Bairn City Rollers</a> - Falkirk/Stirling-based All-Gender League</p>
 <p><del>Capital City Roller Derby</del> - (disbanded) Edinburgh-based Men's League</p>
@@ -42,15 +42,15 @@
 <p><del>Fierce Valley Roller Cubs</del> - Falkirk/Stirling-based Junior League (All Gender, disbanded)</p>
 <p><a href="http://glasgowrollerderby.com">Glasgow Roller Derby</a> - Glasgow-based WFTDA member League</p>
 <p><a href="https://www.facebook.com/pg/GlasgowMensRollerDerby/">Glasgow Men's Roller Derby</a> - Glasgow/West Lothian based MRDA member League</p>
-<p><a href="http://www.granitecityrollerderby.co.uk/">Granite City Roller Derby</a> - Aberdeen-based WFTDA-gender-policy? League</p>
+<p><a href="http://www.granitecityrollerderby.co.uk/">Granite City Roller Derby</a> - Aberdeen-based OTA-gender-policy League</p>
 <p><a href="https://www.facebook.com/granitecitybrawlers/">Granite City Brawlers</a> - Aberdeen-based MRDA member League</p>
 <p><del>Hades Roller Boy</del>s - Falkirk/Stirling-based Men's League (on hiatus?)</p>
 <p><a href="https://helginrollerderby.wordpress.com/">Helgin Roller Derby</a> - Elgin-based League</p>
-<p><a href="https://www.facebook.com/InverclydeRollerDerby/">Inverclyde Roller Derby</a> - Inverclyde-based All-Gender League</p>
+<p><a href="https://www.facebook.com/InverclydeRollerDerby/">Inverclyde Roller Derby</a> - Inverclyde-based All-Gender League (still going?)</p>
 <p><a href="http://www.invernessrollerderby.com/">Inverness City Roller Derby</a> - Inverness-based All-Gender League</p>
-<p><a href="http://lothianderbydolls.com/">Lothian Derby Dolls</a> - Midlothian-based WFTDA-gender-policy League [additional All-Gender league in "Fear and Lothian"]</p>
+<p><a href="https://lothianrollerderby.co.uk/">Lothian Roller Derby</a> - Midlothian-based WFTDA-gender-policy League [additional All-Gender league in "Fear and Lothian"]</p>
 <p><a href="http://www.meancityrollerderby.com/index.php">Mean City Roller Derby</a> - Glasgow/Renfrewshire-based All-Gender League</p>
-<p><a href="http://www.ntrg.uk/">New Town Roller Girls</a> - Livingston/West Lothian-based WFTDA-gender-policy League</p>
+<p><a href="https://www.facebook.com/NewTownRollerDerby/">New Town Roller Derby</a> - Livingston/West Lothian-based WFTDA-gender-policy League</p>
 <p><a href="https://www.facebook.com/OrkneyViqueens/">Orkney ViQueens Roller Derby</a> - Orkney-based All-Gender League</p>
 <p><a href="http://resistancerdg.tumblr.com/">Resistance Roller Derby</a> - Glasgow-based Junior League, supporting LGBTI+ in particular.</p>
 <p>Ullapool Slayers - Ullapool-based Open? League [on hiatus]</p>
@@ -67,12 +67,15 @@
 <p><a href="http://derbylisting.com/dl/grid/">Derbylisting.com</a> - comprehensive, community-resourced list of all roller derby leagues in the World.</p>
 <p><del><a href="http://derbyladder.blogspot.co.uk/">Derby &amp; Logic:By Stat Man</a> </del>- Stats,analysis and articles</p>
 <p><del><a href="http://www.derbynewsnetwork.com/">Derby News Network</a> </del>- News,scores,rankings,live streaming and an extensive bout archive (sadly defunct)</p>
+<p><a href="https://www.facebook.com/pg/5segs/">5 Segundos</a> - Argentine Roller Derby podcast + site</p>
 <p><strong>Magazines</strong></p>
 <p><del><a href="http://www.insidelinemagazine.co.uk/about/">Inside Line</a></del> - UK based,published quarterly (sadly ceased publication)</p>
 <p><a href="http://fiveonfivemag.com/">FiveOnFive</a> - Official magazine of WFTDA,published quarterly.</p>
 <p><a href="http://www.bloodandthundermag.com/">Blood And Thunder</a> - US based,published quarterly (sleeping).</p>
 <p><a href="http://www.derbylife.com/">Derbylife</a>-Roller Derby stories, opinions and advice.</p>
-<p><a href="https://whataboutmagazine.com/"><strong>What A Bout</strong></a> - Central and Eastern Europe focussed online derby magazine, monthly</p>
+<p><a href="https://whataboutmagazine.com/">What A Bout</a> - Central and Eastern Europe focussed online derby magazine, monthly</p>
+<p><a href="https://www.derbydigger.de/">Derby Digger</a> - German Derby fanzine</p>
+<p>[6717] (https://fanzine6717.bigcartel.com/) - Quebec-based (French language) derby fanzine</p>
 <p><strong>Follow Scottish Roller Derby</strong></p>
 <p><a href="https://twitter.com/ScotRollerDerby"><img class="alignleft size-full wp-image-4730" src="https://scottishrollerderby.files.wordpress.com/2013/04/01_twitter.png" alt="01_twitter" width="150" height="150"></a></p>
 <p><a href="https://www.facebook.com/scottish.rollerderby"><img class="alignleft size-full wp-image-4731" src="https://scottishrollerderby.files.wordpress.com/2013/04/02_facebook.png" alt="02_facebook" width="150" height="150"></a></p>
