--- a/pages/resources/index.html
+++ b/pages/resources/index.html
@@ -75,7 +75,7 @@
 <p><a href="http://www.derbylife.com/">Derbylife</a>-Roller Derby stories, opinions and advice.</p>
 <p><a href="https://whataboutmagazine.com/">What A Bout</a> - Central and Eastern Europe focussed online derby magazine, monthly</p>
 <p><a href="https://www.derbydigger.de/">Derby Digger</a> - German Derby fanzine</p>
-<p>[6717] (https://fanzine6717.bigcartel.com/) - Quebec-based (French language) derby fanzine</p>
+<p><a href="https://fanzine6717.bigcartel.com/">6717</a> - Quebec-based (French language) derby fanzine</p>
 <p><strong>Follow Scottish Roller Derby</strong></p>
 <p><a href="https://twitter.com/ScotRollerDerby"><img class="alignleft size-full wp-image-4730" src="https://scottishrollerderby.files.wordpress.com/2013/04/01_twitter.png" alt="01_twitter" width="150" height="150"></a></p>
 <p><a href="https://www.facebook.com/scottish.rollerderby"><img class="alignleft size-full wp-image-4731" src="https://scottishrollerderby.files.wordpress.com/2013/04/02_facebook.png" alt="02_facebook" width="150" height="150"></a></p>
