Added map for Dundee

--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@ France, the 7th edition of Nantes' West Track Story this weekend (20th-21st Apri
 <p>West Track Story 7 will see 5 WFTDA teams compete in a full round-robin tournament
 for a total of 10 games. As with previous years, the event is truly international,
 with each team representing a different country.</p>
-<blockquote>
-<ul class="simple">
+<img alt="/images/2019/04/WTS7-map.png" src="images/2019/04/WTS7-map.png"><ul class="simple">
 <li>Munich Rolling Rebels representing Germany (WFTDA rating 96.52, FTS Global 552.6)</li>
 <li>Namur Roller Girls representing Belgium (WFTDA rating 123.31, FTS Global 648.3)</li>
 <li>Zurich City Roller Derby representing Switzerland (WFTDA rating 152.73, FTS Global 629.7)</li>
 </ul>
-<p>and, of course, the hosts</p>
+<blockquote>
+and, of course, the hosts</blockquote>
 <ul class="simple">
 <li>Nantes Derby Girls representing France, (WFTDA rating 185.91, FTS Global 617.3)</li>
 </ul>
-</blockquote>
 <p>in addition to Dundee (WFTDA rating 101.41, FTS Global 590.9) .</p>
 <p>(The total "strength ratio", the ratio of predicted scores between the highest
 and lowest rated, for the attending teams is about 3 by WFTDA, or 2 by FTS Global
