--- a/index-91.html
+++ b/index-91.html
@@ -8,7 +8,7 @@
 <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
 <link rel="canonical" href="https://www.scottishrollerderbyblog.com/index-91.html">
-<link rel="prev" href="." type="text/html">
+<link rel="prev" href="index-92.html" type="text/html">
 <link rel="next" href="index-90.html" type="text/html">
 <!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]-->
 </head>
@@ -2118,7 +2118,7 @@ There's derby in Costa Rica, Brazil and Argentina this weekend, at least (we fin
     
         <nav class="postindexpager"><ul class="pager">
 <li class="previous">
-                <a href="." rel="prev">Newer posts</a>
+                <a href="index-92.html" rel="prev">Newer posts</a>
             </li>
             <li class="next">
                 <a href="index-90.html" rel="next">Older posts</a>
