Playoffs May build finish

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>7</strong></td>
-<td align="center"><strong>Crime City Rollers</strong></td>
+<td align="center"><span style="color:red"><strong>Crime City Rollers</strong></span></td>
 <td align="center">Europe</td>
 <td>9</td>
 <td align="right">884.2</td>
@@ -142,7 +142,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>12</strong></td>
-<td align="center"><strong>Rainy City Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Rainy City Roller Derby</strong></span></td>
 <td align="center">Europe</td>
 <td>7</td>
 <td align="right">795.37</td>
@@ -182,7 +182,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>17</strong></td>
-<td align="center"><strong>London Rollergirls</strong></td>
+<td align="center"><span style="color:red"><strong>London Rollergirls</strong></span></td>
 <td align="center">Europe</td>
 <td>8</td>
 <td align="right">745.49</td>
@@ -198,7 +198,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>19</strong></td>
-<td align="center"><strong>Canberra Roller Derby League</strong></td>
+<td align="center"><span style="color:red"><strong>Canberra Roller Derby League</strong></span></td>
 <td align="center">NA West</td>
 <td>7</td>
 <td align="right">722.89</td>
@@ -214,7 +214,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>21</strong></td>
-<td align="center"><strong>Helsinki Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Helsinki Roller Derby</strong></span></td>
 <td align="center">Europe</td>
 <td>7</td>
 <td align="right">656.64</td>
@@ -238,7 +238,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right"><strong>24</strong></td>
-<td align="center"><strong>Stockholm Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Stockholm Roller Derby</strong></span></td>
 <td align="center">Europe</td>
 <td>6</td>
 <td align="right">591</td>
@@ -294,7 +294,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">31</td>
-<td align="center"><strong>Sun State Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Sun State Roller Derby</strong></span></td>
 <td align="center">NA West</td>
 <td>7</td>
 <td align="right">525.78</td>
@@ -302,7 +302,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">32</td>
-<td align="center"><strong>Naptown Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Naptown Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>7</td>
 <td align="right">525.22</td>
@@ -318,7 +318,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">34</td>
-<td align="center"><strong>Boston Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Boston Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>11</td>
 <td align="right">514.58</td>
@@ -454,7 +454,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">51</td>
-<td align="center"><strong>Sacramento Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Sacramento Roller Derby</strong></span></td>
 <td align="center">NA West</td>
 <td>7</td>
 <td align="right">413.7</td>
@@ -470,7 +470,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">53</td>
-<td align="center"><strong>Perth Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Perth Roller Derby</strong></span></td>
 <td align="center">Europe</td>
 <td>4</td>
 <td align="right">407.55</td>
@@ -486,7 +486,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">55</td>
-<td align="center"><strong>Gem City Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Gem City Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>4</td>
 <td align="right">402.03</td>
@@ -542,7 +542,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">62</td>
-<td align="center"><strong>Antwerp Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Antwerp Roller Derby</strong></span></td>
 <td align="center">Europe</td>
 <td>8</td>
 <td align="right">362.99</td>
@@ -598,7 +598,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">69</td>
-<td align="center"><strong>Orangeville Roller Girls</strong></td>
+<td align="center"><span style="color:red"><strong>Orangeville Roller Girls</strong></span></td>
 <td align="center">NA East</td>
 <td>7</td>
 <td align="right">321.71</td>
@@ -662,7 +662,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">77</td>
-<td align="center"><strong>Ottawa Valley Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Ottawa Valley Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>6</td>
 <td align="right">296.85</td>
@@ -678,7 +678,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">79</td>
-<td align="center"><strong>Pirate City Rollers</strong></td>
+<td align="center"><span style="color:red"><strong>Pirate City Rollers</strong></span></td>
 <td align="center">NA West</td>
 <td>4</td>
 <td align="right">293.46</td>
@@ -710,7 +710,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">83</td>
-<td align="center"><strong>Crossroads City Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Crossroads City Derby</strong></span></td>
 <td align="center">NA West</td>
 <td>6</td>
 <td align="right">267.91</td>
@@ -750,7 +750,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">88</td>
-<td align="center"><strong>Humboldt Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Humboldt Roller Derby</strong></span></td>
 <td align="center">NA West</td>
 <td>5</td>
 <td align="right">255.99</td>
@@ -758,7 +758,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">89</td>
-<td align="center"><strong>Assassination City Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Assassination City Roller Derby</strong></span></td>
 <td align="center">NA West</td>
 <td>5</td>
 <td align="right">252.15</td>
@@ -774,7 +774,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">91</td>
-<td align="center"><strong>Penn Jersey Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Penn Jersey Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>7</td>
 <td align="right">247.19</td>
@@ -838,7 +838,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
 </tr>
 <tr>
 <td align="right">99</td>
-<td align="center"><strong>Appalachian Roller Derby</strong></td>
+<td align="center"><span style="color:red"><strong>Appalachian Roller Derby</strong></span></td>
 <td align="center">NA East</td>
 <td>9</td>
 <td align="right">228.84</td>
