ThunderRats not attending Blue Jays event 18th Highlights fixed

--- a/index.html
+++ b/index.html
@@ -450,12 +450,13 @@ get themselves an actual webpage [we can help host one if you need help]).</p>
 </ul>
 </li>
 <li>Sun:<ul>
-<li>Blue Jay Rollers (Curitiba) versus Thunder Rats Derby Squad (Santos)</li>
+<li>&lt;s&gt;Blue Jay Rollers (Curitiba) versus Thunder Rats Derby Squad (Santos)&lt;/s&gt;</li>
 <li>Blue Jay Rollers versus Iron Ladies Roller Derby (Blumenau)</li>
-<li>Thunder Rats Derby Squad versus Iron Ladies Roller Derby</li>
+<li>&lt;s&gt;Thunder Rats Derby Squad versus Iron Ladies Roller Derby&lt;/s&gt;</li>
 </ul>
 </li>
 </ul>
+<p><em>Note, due to problems with Thunder Rats attending the event, their games were replaced with games against a pick-up team from skaters present</em></p>
 <p>Event starts: 0900 Saturday (doors open)</p>
 <p>Venue: Sei São José dos Pinhais, Rua Maria Helena 707, Bairro São Pedro, São José dos Pinhais, Brazil</p>
 </div>
