Publish HARD @ TNT guest post

--- a/index-92.html
+++ b/index-92.html
@@ -8,7 +8,7 @@
 <link href="assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
 <link rel="canonical" href="https://www.scottishrollerderbyblog.com/index-92.html">
-<link rel="prev" href="." type="text/html">
+<link rel="prev" href="index-93.html" type="text/html">
 <link rel="next" href="index-91.html" type="text/html">
 <!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]-->
 </head>
@@ -2359,7 +2359,7 @@ Whilst we can't predict the future, this will give the best guess of what teams 
     
         <nav class="postindexpager"><ul class="pager">
 <li class="previous">
-                <a href="." rel="prev">Newer posts</a>
+                <a href="index-93.html" rel="prev">Newer posts</a>
             </li>
             <li class="next">
                 <a href="index-91.html" rel="next">Older posts</a>
