fixed photo attribution in MacIntyres interview

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Scottish Junior Roller Derby's first club, Fierce Valley Roller Cubs, is no more
 </dd>
 </dl>
 <div class="figure">
-<img alt="Skye, looking pensive." src="images/2019/06/Skye1.png"><p class="caption">Skye [Photo: Laura MacDonald]</p>
+<img alt="Skye, looking pensive." src="images/2019/06/Skye1.png"><p class="caption">Skye [Photo: David Prentice]</p>
 </div>
 <p><em>So, let's talk about the game in more detail!
 How was it being benched by / benching your sister?</em></p>
