fixed photo attribution in MacIntyres interview

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ It's doing concentrated training for level 3 skaters with a view to getting them
 </dd>
 </dl>
 <div class="figure">
-<img alt="Skye, jamming, in Bairn City Rollers bout." src="images/2019/06/Skye2.png"><p class="caption">Skye [Photo: David Prentice]</p>
+<img alt="Skye, jamming, in Bairn City Rollers bout." src="images/2019/06/Skye2.png"><p class="caption">Skye [Photo: Dave Moore]</p>
 </div>
 <p><em>Skye, do you want to talk a bit about that plan too?</em></p>
 <dl class="docutils">
