Durban Short Track for 28th

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                             <a class="tag" href="categories/national-tournament/"><span>national tournament</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
                             <a class="tag" href="categories/norwegian-roller-derby/"><span>norwegian roller derby</span></a>
+                            <a class="tag" href="categories/south-african-roller-derby/"><span>south african roller derby</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
                 </span>
             </div>
