Puebla and Neuquen bouts for 21 July added to highlights

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ national tournaments in Roller Derby.</p>
         <div>
 <p>This weekend (and the week leading to it) is pretty dominated by the world's largest annual Roller Derby event, Rollercon. With people travelling across the world to attend, the schedule elsewhere is a little sparse, but there are still exciting things happening.</p>
 <p>We've also included a bonus section in this week's roundup highlighting sessions at Rollercon itself which we think are either interesting, or important, or both.</p>
+<p><em>This list was updated on Thursday 18th to include late announced bouts on Sunday in Mexico and Argentina</em></p>
 <p>The rules are, as usual: highlights limited to 1 event per country, with an "extra" event allowed for a different kind of fixture
 (so, 1 tournament and 1 bootcamp), or if they involve Scottish leagues (since we are the <em>Scottish</em> Roller Derby Blog).
 Other notability might also allow the extra event - great posters, notable teams, etc. (League birthdays may count as "special" enough, at our discretion ;) )</p>
