Add UAE Monday events, late announced, to the 03 Aug highlights + map

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             </div>
         <div>
 <p>This is another "all weekend in one update" set of highlights, although there are several exciting events this weekend: the first fixture of the Chilean national tournament, the Torneo X, in Valdivia; the MRDA Men's European Qualifiers in Aberdeen; and Argentina meet Uruguay in Buenos Aires, for one of Tempestad Roller Derby's first games (plus raising funds for 2x4 to attend in WFTDA Playoffs).</p>
+<p><em>This article was edited on the 1st August to include late announced events in Dubai</em></p>
 <p>The rules are, as usual: highlights limited to 1 event per country, with an "extra" event allowed for a different kind of fixture
 (so, 1 tournament and 1 bootcamp), or if they involve Scottish leagues (since we are the <em>Scottish</em> Roller Derby Blog).
 Other notability might also allow the extra event - great posters, notable teams, etc. (League birthdays may count as "special" enough, at our discretion ;) )</p>
