Add Colombia's 'friendly tournament' to the 10 Aug highlights after confirmation from Combativas

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <a class="tag" href="categories/bootcamps/"><span>bootcamps</span></a>
                             <a class="tag" href="categories/bundesliga/"><span>bundesliga</span></a>
                             <a class="tag" href="categories/chilean-roller-derby/"><span>chilean roller derby</span></a>
+                            <a class="tag" href="categories/colombian-roller-derby/"><span>colombian roller derby</span></a>
                             <a class="tag" href="categories/continental-cup/"><span>continental cup</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
                             <a class="tag" href="categories/mexican-roller-derby/"><span>mexican roller derby</span></a>
