fix typo and add tags

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                 <br><span class="tags">Tags: 
                             <a class="tag" href="categories/argentine-roller-derby/"><span>argentine roller derby</span></a>
                             <a class="tag" href="categories/australian-roller-derby/"><span>australian roller derby</span></a>
+                            <a class="tag" href="categories/colombian-roller-derby/"><span>colombian roller derby</span></a>
                             <a class="tag" href="categories/emirates-roller-derby/"><span>emirates roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/national-tournaments/"><span>national tournaments</span></a>
+                            <a class="tag" href="categories/patagonian-roller-derby/"><span>patagonian roller derby</span></a>
                             <a class="tag" href="categories/scottish-roller-derby/"><span>scottish roller derby</span></a>
                             <a class="tag" href="categories/statewide-stampede/"><span>statewide stampede</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
