Added Las Judas' roller derby festival to 24 Aug highlights

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <br><span class="tags">Tags: 
                             <a class="tag" href="categories/argentine-roller-derby/"><span>argentine roller derby</span></a>
                             <a class="tag" href="categories/australian-roller-derby/"><span>australian roller derby</span></a>
+                            <a class="tag" href="categories/bootcamps/"><span>bootcamps</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
                             <a class="tag" href="categories/costa-rican-roller-derby/"><span>costa rican roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
@@ -32,12 +33,13 @@
                             <a class="tag" href="categories/mexican-roller-derby/"><span>mexican roller derby</span></a>
                             <a class="tag" href="categories/national-tournaments/"><span>national tournaments</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
+                            <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
                             <a class="tag" href="categories/swedish-roller-derby/"><span>swedish roller derby</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
                 </span>
             </div>
         <div>
-<p>This weekend's biggest events are in Mexico, the USA and the UK: Mexico City hosts the second Division 1 Playoffs for the Mexican National tournament, determining who will join Playoff 1 qualifiers Baja Roller Derby, All-Star Juarez and Discordias in the Championships; Sailor City Rollers represent Latin America in the second North American WFTDA Continental Cup this post season; and Riot City Rollers host the first ever Chartist Cup in Wales. Meanwhile, in Scotland, we're raising money to fight cancer with the return of Charity Roller Derby Sevens tournament, Krustfest, for a second year.</p>
+<p>This weekend's biggest events are in Mexico, the USA and the UK: Mexico City hosts the second Division 1 Playoffs for the Mexican National tournament, determining who will join Playoff 1 qualifiers Baja Roller Derby, All-Star Juarez and Discordias in the Championships; Sailor City Rollers represent Latin America in the second North American WFTDA Continental Cup this post season; and Riot City Rollers host the first ever Chartist Cup in Wales. Meanwhile, in Scotland, we're raising money to fight cancer with the return of Charity Roller Derby Sevens tournament, Krustfest, for a second year, and in Spain they're holding a Roller Derby festival!</p>
 <p>The rules are, as usual: highlights limited to 1 event per country, with an "extra" event allowed for a different kind of fixture
 (so, 1 tournament and 1 bootcamp), or if they involve Scottish leagues (since we are the <em>Scottish</em> Roller Derby Blog).
 Other notability might also allow the extra event - great posters, notable teams, etc. (League birthdays may count as "special" enough, at our discretion ;) )</p>
