Add Buenos Aires events to 24 Aug

--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
                             <a class="tag" href="categories/australian-roller-derby/"><span>australian roller derby</span></a>
                             <a class="tag" href="categories/bootcamps/"><span>bootcamps</span></a>
                             <a class="tag" href="categories/british-roller-derby/"><span>british roller derby</span></a>
+                            <a class="tag" href="categories/chilean-roller-derby/"><span>chilean roller derby</span></a>
                             <a class="tag" href="categories/costa-rican-roller-derby/"><span>costa rican roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
                             <a class="tag" href="categories/mexican-roller-derby/"><span>mexican roller derby</span></a>
                             <a class="tag" href="categories/national-tournaments/"><span>national tournaments</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
+                            <a class="tag" href="categories/polish-roller-derby/"><span>polish roller derby</span></a>
                             <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
                             <a class="tag" href="categories/swedish-roller-derby/"><span>swedish roller derby</span></a>
                             <a class="tag" href="categories/weekend-highlights/"><span>weekend highlights</span></a>
