build for update 31Aug highlight publish

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                             <a class="tag" href="categories/chilean-roller-derby/"><span>chilean roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
+                            <a class="tag" href="categories/mexican-roller-derby/"><span>mexican roller derby</span></a>
                             <a class="tag" href="categories/new-zealand-roller-derby/"><span>new zealand roller derby</span></a>
                             <a class="tag" href="categories/polish-roller-derby/"><span>polish roller derby</span></a>
                             <a class="tag" href="categories/roller-derby-sevens/"><span>roller derby sevens</span></a>
