publish La Güestia addition

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
                             <a class="tag" href="categories/junior-roller-derby/"><span>junior roller derby</span></a>
+                            <a class="tag" href="categories/mexican-roller-derby/"><span>mexican roller derby</span></a>
                             <a class="tag" href="categories/officiating-clinics/"><span>officiating clinics</span></a>
                             <a class="tag" href="categories/spanish-roller-derby/"><span>spanish roller derby</span></a>
                             <a class="tag" href="categories/swiss-roller-derby/"><span>swiss roller derby</span></a>
