publish update for Hungary

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                             <a class="tag" href="categories/finnish-roller-derby/"><span>finnish roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
+                            <a class="tag" href="categories/hungarian-roller-derby/"><span>hungarian roller derby</span></a>
                             <a class="tag" href="categories/indonesian-roller-derby/"><span>indonesian roller derby</span></a>
                             <a class="tag" href="categories/japanese-roller-derby/"><span>japanese roller derby</span></a>
                             <a class="tag" href="categories/mrda/"><span>mrda</span></a>
