--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ In a change from last year, these are organised into two types: <em>"Seminars"</
 <p>But that's not all: just like a physical conference, the 2019 Derby Stance will have fringe and break-out events, organised as ad-hoc Facebook Live mini-streams. (Rule56 has already been trialing this with a series of "5 minutes with ..." events over the past year, and they work very well.)</p>
 <p>Unlike most physical conferences, a benefit of the virtual nature is that all Seminars (but not Workshops) will be available after the fact as recordings if you miss them; and simultaneous automated real-time transcriptions will be available during each session, including translated into a range of languages, to aid inclusion and understanding. (For those who can't attend at all, "watch-later" tickets will also be available to access all the content purely post-hoc).</p>
 <div class="figure">
-<img alt="3x4 Checkerboard of portraits (with names) of all of the Derby Stance 2019 speakers and workshop leaders, with Rule56 logo in the middle." src="images/2019/10/Derbystance2019.jpg"><p class="caption">Photo credits: Nadia Kean and Jennifer B Gaskins (by Zakas Photography); Devoida Mercy (by Louise O'Rourke Photography); Furrocious (by No limit Lien); Dr. Astrid Coxon (by Martin Quadling); Squirrel Power (by Robin Dodd / Purple Turtle Photography); Miss Tea Maven (by David Dyte); Kaio-Kensi (by Owen Clayton); all other photos uncredited.</p>
+<img alt="3x4 Checkerboard of portraits (with names) of all of the Derby Stance 2019 speakers and workshop leaders, with Rule56 logo in the middle." src="images/2019/10/Derbystance2019.jpg"><p class="caption">Photo credits: Nadia Kean and Jennifer B Gaskins (by Zakas Photography); Devoida Mercy (by Louise O'Rourke Photography); Furrocious (by No limit Lien); Dr. Astrid Coxon (by Martin Quadling); Squirrel Power (by Robin Dodd / Purple Turtle Photography); Miss Tea Maven (by David Dyte); Kaio-kensi (by Owen Clayton); all other photos uncredited.</p>
 </div>
 <p>Any Conference or Summit lives and dies by its roster of speakers, and this year's Derby Stance has a very exciting line-up:</p>
 <ul class="simple">
@@ -71,7 +71,7 @@ In a change from last year, these are organised into two types: <em>"Seminars"</
 <li>Coaching mixed-level practices in Adult and Junior programs (Seminar)</li>
 </ul>
 </li>
-<li>Kaio-Kensi (Montreal Roller Derby)<ul>
+<li>Kaio-kensi (Montreal Roller Derby)<ul>
 <li>Organic Drill Design - replicating real game scenarios in drills. (Seminar)</li>
 <li>Building a healthier brain safety culture (Seminar)</li>
 </ul>
