19 Oct highlights build (with 43 / 44 anon hyperlinks mismatch)

--- a/index-97.html
+++ b/index-97.html
@@ -11,7 +11,7 @@
 <link rel="alternate" type="application/rss+xml" title="RSS (it)" href="it/rss.xml">
 <link rel="alternate" type="application/rss+xml" title="RSS (fur)" href="fur/rss.xml">
 <link rel="canonical" href="https://www.scottishrollerderbyblog.com/index-97.html">
-<link rel="prev" href="." type="text/html">
+<link rel="prev" href="index-98.html" type="text/html">
 <link rel="next" href="index-96.html" type="text/html">
 <!--[if lt IE 9]><script src="assets/js/html5.js"></script><![endif]-->
 </head>
@@ -360,7 +360,7 @@ get themselves an actual webpage [we can help host one if you need help]).</p>
     
         <nav class="postindexpager"><ul class="pager">
 <li class="previous">
-                <a href="." rel="prev">Newer posts</a>
+                <a href="index-98.html" rel="prev">Newer posts</a>
             </li>
             <li class="next">
                 <a href="index-96.html" rel="next">Older posts</a>
