--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                             <a class="tag" href="categories/chilean-roller-derby/"><span>chilean roller derby</span></a>
                             <a class="tag" href="categories/chinese-roller-derby/"><span>chinese roller derby</span></a>
                             <a class="tag" href="categories/colombian-roller-derby/"><span>colombian roller derby</span></a>
+                            <a class="tag" href="categories/costa-rican-roller-derby/"><span>costa rican roller derby</span></a>
                             <a class="tag" href="categories/estonian-roller-derby/"><span>estonian roller derby</span></a>
                             <a class="tag" href="categories/french-roller-derby/"><span>french roller derby</span></a>
                             <a class="tag" href="categories/german-roller-derby/"><span>german roller derby</span></a>
